# Blitz3D

./: CMakeLists.txt
.github/workflows/: cmake.yml
BLITZ3D_INSTALL/help/: credits.html  index.html
bblaunch/: CMakeLists.txt  bblaunch.cpp  bblaunch.rc
bbruntime/: CMakeLists.txt  basic.cpp  basic.h  bb_basic.h  bbaudio.cpp  bbaudio.h  bbaudio_fmod.cpp  bbaudio_fmod.h  bbaudio_soloud.cpp  bbaudio_soloud.h  bbbank.cpp  bbblitz3d.cpp  bbblitz3d.h  bbfilesystem.cpp  bbfilesystem.h  bbgraphics.cpp  bbgraphics.h  bbinput.cpp  bbinput.h  bbmath.cpp  bbmath.h  bbruntime.cpp  bbruntime.h  bbsockets.cpp  bbsockets.h  bbstream.cpp  bbstream.h  bbstring.cpp  bbstring.h  bbsys.cpp  bbsys.h  multiplay.cpp  multiplay.h  multiplay_setup.cpp  multiplay_setup.h  multiplay_setup.rc  resource.h  std.h  userlib.cpp  userlib.h  (+2 more)
bbruntime_dll/: CMakeLists.txt  bbruntime_dll.cpp  bbruntime_dll.h  bbruntime_dll.rc
blitz/: CMakeLists.txt  libs.cpp  libs.h  main.cpp
blitz3d/: CMakeLists.txt  animation.cpp  animation.h  animator.cpp  animator.h  bd2model.cpp  bd2model.h  blitz3d.h  boxvis.cpp  brush.cpp  brush.h  cachedtexture.cpp  cachedtexture.h  camera.cpp  camera.h  collision.cpp  collision.h  entity.cpp  entity.h  frustum.cpp  frustum.h  geom.cpp  geom.h  group.h  light.cpp  light.h  listener.cpp  listener.h  loader.cpp  loader_3ds.cpp  loader_3ds.h  loader_b3d.cpp  loader_b3d.h  loader_x.cpp  loader_x.h  md2model.cpp  md2model.h  md2model_bak.cpp  md2norms.cpp  md2norms.h  (+41 more)
blitzide/: CMakeLists.txt  about.cpp  about.h  blitzide.cpp  blitzide.h  blitzide.rc  editor.cpp  editor.h  funclist.cpp  funclist.h  helphtml.cpp  helphtml.h  htmlhelp.cpp  htmlhelp.h  libs.cpp  libs.h  mainframe.cpp  mainframe.h  prefs.cpp  prefs.h  resource.h  stdafx.cpp  stdafx.h  tabber.cpp  tabber.h
compiler/: CMakeLists.txt  assem.h  block.h_old  codegen.h  decl.cpp  decl.h  decl.old  declnode.cpp  declnode.h  environ.cpp  environ.h  ex.h  exprnode.cpp  exprnode.h  label.h  node.cpp  node.h  nodes.h  parser.cpp  parser.h  prognode.cpp  prognode.h  semant.old  std.h  stmtnode.cpp  stmtnode.h  toker.cpp  toker.h  type.cpp  type.h  var.h  varnode.cpp  varnode.h
compiler/assem_x86/: asm_insts.cpp  assem_x86.cpp  assem_x86.h  insts.h  operand.cpp  operand.h
compiler/codegen_x86/: codegen_x86.cpp  codegen_x86.h  tile.cpp  tile.h
config/: config.h
debugger/: CMakeLists.txt  debugger.h  debuggerapp.cpp  debuggerapp.h  debugtree.cpp  debugtree.h  mainframe.cpp  mainframe.h  sourcefile.cpp  sourcefile.h  stdafx.h  stdutil.cpp  tabber.cpp  tabber.h
freeimage/: FreeImage.h
freeimage/LibJPEG/: ansi2knr.c  cdjpeg.c  cdjpeg.h  cjpeg.c  ckconfig.c  djpeg.c  example.c  jcapimin.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jchuff.h  jcmainct.c  jconfig.h  jcphuff.c  jctrans.c  jdcolor.c  jdct.h  jdhuff.c  jdhuff.h  jdinput.c  jdmerge.c  jdphuff.c  jdtrans.c  jerror.c  jmemdos.c  jmemmac.c  jmemmgr.c  jpegint.h  jpeglib.h  jquant1.c  jquant2.c  rdbmp.c  rdppm.c  rdrle.c  rdtarga.c  wrbmp.c  wrppm.c
freeimage/LibMNG/: libmng.h  libmng_callback_xs.c  libmng_chunk_io.c  libmng_chunk_io.h  libmng_chunk_prc.c  libmng_chunk_prc.h  libmng_chunk_xs.c  libmng_chunks.h  (+27 more)
gxruntime/: CMakeLists.txt  asmcoder.cpp  asmcoder.h  ddutil.cpp  ddutil.h  gxaudio_fmod.cpp  gxaudio_fmod.h  gxcanvas.cpp  gxcanvas.h  gxchannel.cpp  gxchannel.h  gxdevice.cpp  gxdevice.h  gxdir.cpp  gxdir.h  gxfilesystem.cpp  gxfilesystem.h  gxfont.cpp  gxfont.h  gxgraphics.cpp  gxgraphics.h  gxinput.cpp  gxinput.h  gxlight.cpp  gxlight.h  gxmesh.cpp  gxmesh.h  gxmovie.cpp  gxmovie.h  gxmusic.cpp  gxmusic.h  gxruntime.h  gxruntime_b3d.cpp  gxruntime_b3d.h  gxscene.cpp  gxscene.h  gxsound.cpp  gxsound.h  gxtimer.cpp  gxtimer.h  (+1 more)
linker/: dlltoexe.cpp  dlltoexe.h  image_util.cpp  image_util.h  linker.cpp  linker.h  std.h
linker_dll/: CMakeLists.txt  linker_dll.cpp
soloud/: CMakeLists.txt
stdutil/: CMakeLists.txt  stdutil.cpp  stdutil.h
(+791 files in other folders)
